
	* lib/apache.cygclass (apache_postinst): Adapt to binutils changes.

	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump.

*** 0.3.11 ***

	* bin/cygport.in (__prepetc): Accept RESTRICT=postinst-gconf.
	(cygautoreconf): Install config.rpath if required.

	* bin/cygport.in: Allow SRC_URI/PATCH_URI to contain CGI arguments.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/ebook.cygclass: New cygclass for EBook documentation.

	* lib/java.cygclass: Use fully-qualified paths for all tools.

	* lib/gnome2.cygclass (gnome2_autoreconf):
	Add support for skipping directories with GNOME2_NO_AUTOGEN.
	Install config.rpath if required.
	Improve automake version detection (requires gnome-common-2.20.0-2).	

	* lib/git.cygclass (git_fetch): Ignore .gitignore.

	* lib/kde3.cygclass: Correct SRC_URI of kdevelop-3.5.2.

	* lib/php.cygclass: Define PHP_PEAR_DIR.
	(php_postinst): Fix .ini naming based on extension, not package name.

	* lib/pygtk.cygclass: Correct naming of nautilus-python.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/ggz.cygclass: New cygclass for GGZ packages.

	* bin/cygport.in (__pkg_binpkg): Allow empty subpackages.

	* lib/ruby.cygclass (ruby_install): Pass arguments to 'rake install'.

	* CYGWIN-PATCHES/README:
	* bin/cygport.in (__src_fetch):
	* lib/Makefile.am:
	* lib/mtn.cygclass: New cygclass for Monotone checkouts.

	* bin/cygport.in (__pkg_diff): Exclude *config.h.in.
	(__pkg_diff): Fix deprecated use of DIFF_EXCLUDES="-x foo".
	(LIBS): default to empty and export.
	(cygconf): Pass --datadir=/usr/share regardless of autoconf version.

	* lib/gtk2-perl.cygclass: Add Mozilla-DOM and Gtk2-MozEmbed.

	* bin/cygport.in (__prepdoc): Accept RESTRICT=postinst-doc.

	* bin/cygport.in (__pkg_diff):
	Only exclude aclocal.m4 from patch if generated by aclocal.
	* lib/berkdb.cygclass (DIFF_EXCLUDES): Add aclocal.m4 to compensate.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am: