@@ -120,6 +120,7 @@ Files included in the binary package:
   /usr/lib/cygport/lib/mono.cygclass
   /usr/lib/cygport/lib/mtn.cygclass
   /usr/lib/cygport/lib/ocaml.cygclass
+  /usr/lib/cygport/lib/octave.cygclass
   /usr/lib/cygport/lib/opensync.cygclass
   /usr/lib/cygport/lib/perl.cygclass
   /usr/lib/cygport/lib/php.cygclass
